; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/inetcomm/extr_mimeintl.c_mlang_getcodepageinfo.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/inetcomm/extr_mimeintl.c_mlang_getcodepageinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*)* @mlang_getcodepageinfo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mlang_getcodepageinfo(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %7 = call i32 @get_mlang(i32** %6)
  store i32 %7, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  %9 = call i64 @SUCCEEDED(i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %18

11:                                               ; preds = %2
  %12 = load i32*, i32** %6, align 8
  %13 = load i32, i32* %3, align 4
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @IMultiLanguage_GetCodePageInfo(i32* %12, i32 %13, i32* %14)
  store i32 %15, i32* %5, align 4
  %16 = load i32*, i32** %6, align 8
  %17 = call i32 @IMultiLanguage_Release(i32* %16)
  br label %18

18:                                               ; preds = %11, %2
  %19 = load i32, i32* %5, align 4
  ret i32 %19
}

declare dso_local i32 @get_mlang(i32**) #1

declare dso_local i64 @SUCCEEDED(i32) #1

declare dso_local i32 @IMultiLanguage_GetCodePageInfo(i32*, i32, i32*) #1

declare dso_local i32 @IMultiLanguage_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
